@@ -1,3 +1,8 @@
+2004-12-31  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/man2.test, tests/transform.test: Specify --mandir, in order
+	not to fail when Autoconf changes its $mandir default.
+
 2004-12-27  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (Preprocessed Fortran): Fix the definition of FCLINK.
